# building-a-computer

./: .gitignore  CMakeLists.txt  a.out  andGate.c  andGate.h  main.c  nandGate.c  nandGate.h  norGate.c  norGate.h  notGate.c  notGate.h  orGate.c  orGate.h  transistor.c  transistor.h  xorGate.h
constants/: constant.c
debugging/: stacktrace.c  stacktrace.h
libconst/: constant.c  constant.h  libconst.h
libgate/: andGate.c  andGate.h  nandGate.c  nandGate.h  norGate.c  norGate.h  notGate.c  notGate.h  orGate.c  orGate.h  xorGate.c  xorGate.h
libtrans/: transistor.c  transistor.h
libtransistor/: libtransistor.h  transistor.c  transistor.h  transistor.h.gch
libwire/: wire.c  wire.h
logic_gates/: andGate.c  andGate.h  libgate.h  nandGate.c  notGate.c  notGate.h  orGate.h  xorGate.c
transistor/: libtrans.h  transistor.c  transistor.h
wire/: libwire.h  wire.c  wire.h
